@@ -1981,7 +1981,7 @@
 (define_insn "*addsi3_5200"
   [(set (match_operand:SI 0 "nonimmediate_operand" "=m,?a,?a,r")
 	(plus:SI (match_operand:SI 1 "general_operand" "%0,a,rJK,0")
-		 (match_operand:SI 2 "general_src_operand" "d,rJK,a,mrIKLs")))]
+		 (match_operand:SI 2 "general_src_operand" "d,rJK,a,mrIKLi")))]
   "TARGET_COLDFIRE"
   "* return output_addsi3 (operands);")
 
